@@ -1,4 +1,41 @@
+*.py[cod]
+.idea
+project.sublime-workspace
+.codeintel
+
+# C extensions
+*.so
+
+# Packages
+*.egg
 *.egg-info
-*.pyc
-/dist
-/build
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# vim
+*.swp
