@@ -50,6 +50,61 @@ Now you can open your ``src/`` folder as project in Sublime with perfect auto-co
 
 (`See how to configure Sublime Text 2 commaline commands <http://opensourcehacker.com/2012/05/11/sublime-text-2-tips-for-python-and-web-developers/>`_)
 
+
+We'll start by creating a buildout that uses the recipe::
+
+We form a config which uses paths for every language supported::
+
+    >>> from corneti.recipes.codeintel import CodeintelRecipe
+    >>> extra_info = "\n".join(map(lambda x: r"""
+    ... {0}-path = /some/bin/{0}
+    ... {0}-extra-paths = /some/{0}/path
+    ...                   /some/{0}/path2
+    ... """.format(x.lower()), CodeintelRecipe.SUPPORTED_LANGUAGES))
+    >>> write('buildout.cfg',
+    ... r"""
+    ... [buildout]
+    ... parts = codeintel
+    ... newest = false
+    ...
+    ... [codeintel]
+    ... recipe = corneti.recipes.codeintel
+    ... eggs = zc.buildout
+    ... {0}
+    ... """.format(extra_info))
+
+Running the buildout gives us::
+
+    >>> print system(buildout)
+    Installing codeintel.
+
+We see the folder with codeintel config is created
+    >>> print ls('.')
+    d  .codeintel
+    ...
+
+    >>> print ls('./.codeintel')
+    -  config
+    ...
+
+We check the contents of the config
+
+    >>> import os
+    >>> import simplejson
+    >>> import pprint
+    >>> contents = open(os.path.join('.codeintel', 'config')).read()
+    >>> contents_json = simplejson.loads(contents)
+    >>> '/some/python/path' in contents_json['Python']['pythonExtraPaths']
+    True
+    >>> '/some/python/path2' in contents_json['Python']['pythonExtraPaths']
+    True
+    >>> len(contents_json['Python']['pythonExtraPaths'])
+    4
+
+We check that every lang is present in config
+    >>> contents_json.keys() == CodeintelRecipe.SUPPORTED_LANGUAGES
+    True
+
 Tips
 =======
 
